[package]
name = "md5rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
crossbeam-channel = "0.5.13"
csv = "1.3.0"
fast_image_resize = { version = "5.0.0", features = ["rayon"] }
ffmpeg-sidecar = "1.2.0"
image = "0.25.2"
indicatif = { version = "0.17.8", features = ["rayon"] }
jpeg-decoder = "0.3.1"
ndarray = "0.16.1"
nshare = { version = "0.10.0", default-features = false, features = [
    "image",
    "ndarray",
] }
nom-exif = "2.1.0"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
time = "0.3.36"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "std",
    "local-time",
    "env-filter",
] }
walkdir = "2.5.0"
uuid = { version = "1.10.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
itertools = "0.13.0"
toml = "0.8.19"

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "=2.0.0-rc.6", features = [
    "openvino",
    "load-dynamic",
    "download-binaries",
    "cuda",
    "tensorrt",
    "directml",
] }

[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "=2.0.0-rc.6", features = [
    "openvino",
    "load-dynamic",
    "download-binaries",
    "cuda",
    "tensorrt",
] }

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "=2.0.0-rc.6", features = [
    "load-dynamic",
    "download-binaries",
    "coreml",
] }

[profile.release]
lto = true
